--- a/WebDevDing/index.html
+++ b/WebDevDing/index.html
@@ -14,7 +14,7 @@
 
     <nav>
 
-      <img id="navImg" src="/img/mohawk.png">
+      <img id="navImg" src="img/mohawk.png">
       <div id="blankSpace"></div>
       <a class="navi" href="#Personal Info"> Personal Info</a>
       <a class="navi" href="#Skills">Skills</a>
@@ -74,12 +74,12 @@
 
           <li>Basic 3D moddeling with Blender®
             <br>
-            <img class="logo" src="/img/Logo_Blender.png">
+            <img class="logo" src="img/Logo_Blender.png">
           </li>
 
           <li>Artistic with a pencil as well al Adobe Illutrator®
             <br>
-            <img class="logo" src="/img/Adobe.png">
+            <img class="logo" src="img/Adobe.png">
           </li>
 
         </ul>
@@ -92,12 +92,12 @@
 
           <li>Basic JavaScript® knowledge
             <br>
-            <img class="logo" src="/img/Javascript.png">
+            <img class="logo" src="img/Javascript.png">
           </li>
 
           <li>Basic HTML™ and CSS™ knowledge
             <br>
-            <img class="logo" src="/img/HTML CSS.png">
+            <img class="logo" src="img/HTML CSS.png">
           </li>
 
         </ul>
@@ -126,14 +126,14 @@
     <H3>Sprint1</H3>
     <p>Devloped a casing for a robot, personalized for one of my teammates</p>
 
-    <img class="stud" src="/img/Screenshot 2022-10-06 at 15.22.47.png">
+    <img class="stud" src="img/Screenshot 2022-10-06 at 15.22.47.png">
 
     <H3>Sprint2</H3>
     <p>Focused on one of the robots to make it a team effort</p>
 
     <div id="scroll">
 
-    <img class="stud" src="/img/20220928_142459.jpg"> <img class="stud" src="/img/20220928_142512.jpg">
+    <img class="stud" src="img/20220928_142459.jpg"> <img class="stud" src="/img/20220928_142512.jpg">
 
   </div>
 
@@ -155,7 +155,7 @@
       interest.
     </p>
     <img id="cactus"
-      src="/img/Cactus.jpeg">
+      src="img/Cactus.jpeg">
     <p>
       I've also spent a great deal of time imagining and cconstructing stories and the people that live in them, not
       necessarily in writing, but in visuals, like drawings of characters, landscapes, buildings and tools, this is also
