--- a/WebDevDing/index.html
+++ b/WebDevDing/index.html
@@ -52,7 +52,7 @@
       <br>
       I'm currently in my 1st semester for a study called "Creative Media and Game Technologies"
       <br>
-      <img id="Mohawk" src="img/mohawk.png">
+      <img id="Mohawk" src="./img/mohawk.png">
       <br>
       In my free time I do fitness, playing videogames, and growng cacti
 
@@ -74,7 +74,7 @@
 
           <li>Basic 3D moddeling with Blender®
             <br>
-            <img class="logo" src="img/Logo_Blender.png">
+            <img class="logo" src="./img/logoblender.png">
           </li>
 
           <li>Artistic with a pencil as well al Adobe Illutrator®
