--- a/WebDevDing/index.html
+++ b/WebDevDing/index.html
@@ -52,7 +52,7 @@
       <br>
       I'm currently in my 1st semester for a study called "Creative Media and Game Technologies"
       <br>
-      <img id="Mohawk" src="./img/mohawk.png">
+      <img id="Mohawk" src="img/mohawk.png">
       <br>
       In my free time I do fitness, playing videogames, and growng cacti
 
@@ -74,12 +74,12 @@
 
           <li>Basic 3D moddeling with Blender®
             <br>
-            <img class="logo" src="./img/logoblender.png">
+            <img class="logo" src="img/logoblender.png">
           </li>
 
           <li>Artistic with a pencil as well al Adobe Illutrator®
             <br>
-            <img class="logo" src="img/Adobe.png">
+            <img class="logo" src="img/adobe.png">
           </li>
 
         </ul>
@@ -92,12 +92,12 @@
 
           <li>Basic JavaScript® knowledge
             <br>
-            <img class="logo" src="img/Javascript.png">
+            <img class="logo" src="img/javascript.png">
           </li>
 
           <li>Basic HTML™ and CSS™ knowledge
             <br>
-            <img class="logo" src="img/HTML CSS.png">
+            <img class="logo" src="img/htmlcss.png">
           </li>
 
         </ul>
@@ -126,14 +126,14 @@
     <H3>Sprint1</H3>
     <p>Devloped a casing for a robot, personalized for one of my teammates</p>
 
-    <img class="stud" src="img/Screenshot 2022-10-06 at 15.22.47.png">
+    <img class="stud" src="img/screenshot.png">
 
     <H3>Sprint2</H3>
     <p>Focused on one of the robots to make it a team effort</p>
 
     <div id="scroll">
 
-    <img class="stud" src="img/20220928_142459.jpg"> <img class="stud" src="/img/20220928_142512.jpg">
+    <img class="stud" src="img/screenshot1.jpg"> <img class="stud" src="screenshot2.jpg">
 
   </div>
 
@@ -155,7 +155,7 @@
       interest.
     </p>
     <img id="cactus"
-      src="img/Cactus.jpeg">
+      src="img/cactus.jpeg">
     <p>
       I've also spent a great deal of time imagining and cconstructing stories and the people that live in them, not
       necessarily in writing, but in visuals, like drawings of characters, landscapes, buildings and tools, this is also
