--- a/WebDevDing/index.html
+++ b/WebDevDing/index.html
@@ -3,179 +3,81 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio</title>
-  <link rel="stylesheet" href=".//css/style.css">
+  <title>Home - Esse's portfolio</title>
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
+  <nav>
+
+    <img id="navImg" src="img/mohawk.png">
+    <div id="blankSpace"></div>
+    <a class="navi" href="html/skills.html">Skills</a>
+    <a class="navi" href="html/study.html">Study</a>
+    <a class="navi" href="html/mam.html">More About me</a>
+
+  </nav>
 
   <header>
 
-    <nav>
-
-      <img id="navImg" src="img/mohawk.png">
-      <div id="blankSpace"></div>
-      <a class="navi" href="#Personal Info"> Personal Info</a>
-      <a class="navi" href="#Skills">Skills</a>
-      <a class="navi" href="#Study">Study</a>
-      <a class="navi" href="#Interest">Interests </a>
-      <a class="navi" href="#Contact">Contact </a>
-
-    </nav>
-
-    <H1> Esse's Portfolio Website </H1>
-
-    <p>
-      Hello Visitor, Welcome to my portfolio website,
-      <br>
-      My name is Esse Verdonk and
-      <br>
-      On this page you'll find a list of information about me
-      <br>
-      Thanks for looking into me
-      <br>
-      I look forward to hearing from you in the future
-    </p>
+    <H1> Esse  Verdonk's <br> Portfolio</H1>
 
   </header>
 
-  <section>
+  <main>
 
-  <div class="content">
-
-
-    <H2> <a id="Personal Info">Personal Info</a> </H2>
-
+  <div class="Content" id="int">
+    <div>
+      <H2>Hello visitor!</H2>
     <p>
-      My name is Esse Verdonk, I'm 19 years old and I have a mohawk.
-      <br>
-      I'm currently in my 1st semester for a study called "Creative Media and Game Technologies"
-      <br>
-      <img id="Mohawk" src="img/mohawk.png">
-      <br>
-      In my free time I do fitness, playing videogames, and growng cacti
-
+      My name is Esse Verdonk, <br>
+      and it seems you've found my personal portfolio website. <br>
+      In case you have a proffesional interest, <br>
+      I hope you find something you like.<br>
+      If you're not sure yet,<br>
+      You'll be able to find anything you'd like to know about:<br>
+      <ul>
+        <li>My Study</li>
+        <li>My Skills</li>
+        <li>And Me</li>
+      </ul>
     </p>
-
-  </div>
-
-  
-
-    <div class="content">
-
-      <H2> <a id="Skills">Skills</a> </H2>
-
-      <section>
-
-      <div id="Art">
-
-        <ul id="Sk">
-
-          <li>Basic 3D moddeling with Blender®
-            <br>
-            <img class="logo" src="img/logoblender.png">
-          </li>
-
-          <li>Artistic with a pencil as well al Adobe Illutrator®
-            <br>
-            <img class="logo" src="img/adobe.png">
-          </li>
-
-        </ul>
-
-      </div>
-
-      <div id="Programming">
-
-        <ul id="Sk">
-
-          <li>Basic JavaScript® knowledge
-            <br>
-            <img class="logo" src="img/javascript.png">
-          </li>
-
-          <li>Basic HTML™ and CSS™ knowledge
-            <br>
-            <img class="logo" src="img/htmlcss.png">
-          </li>
-
-        </ul>
-
-      </div>
-
-    </section>
-
     </div>
-
-  </section>
-
-  <div class="content">
-
-    <H2> <a id="Study">Study</a> </H2>
-
-    <p>    As I mentioned in the introduction i'm currently in my first semester of CMGT
-      <br>
-    here follows a list of the projects i've worked on so far.
-    </p>
-
-<section>
-
-  <div id="sem1">
-
-    <H3>Sprint1</H3>
-    <p>Devloped a casing for a robot, personalized for one of my teammates</p>
-
-    <img class="stud" src="img/screenshot.png">
-
-    <H3>Sprint2</H3>
-    <p>Focused on one of the robots to make it a team effort</p>
-
-    <div id="scroll">
-
-    <img class="stud" src="img/screenshot1.jpg"> <img class="stud" src="screenshot2.jpg">
-
+    <div>
+      <img src="/img/essefoto.jpg">
+    </div>
   </div>
 
-    <H3>Sprint3</H3>
-<p>Yet to come...</p>
+  <div class="Content">
+    <div>
+      <H2>Availability</H2>
+      <p>
+        My work availability is around
+        <br>Rotterdam and Spijkenisse,<br>
+        Mondays, Tuesdays and Wensdays<br> 
+        are my current schooldays.
+      </p>
+    </div>
+    <div class="mapouter">
+      <div class="gmap_canvas">
+        <iframe width="300" height="300" id="gmap_canvas" src="https://maps.google.com/maps?q=Rotterdam&t=&z=11&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
 
+        </iframe>
+        <a href="https://fmovies-online.net">fmovies</a><br>
+        <a href="https://www.embedgooglemap.net">adding a google map to a website</a>
+      </div>
+    </div>
   </div>
 
-</section>
+  </main>
 
-  </div>
-  <div class="content">
-
-    <H2> <a id="Interest">Interest</a> </H2>
-
-    <p>
-      I enjoy growing and studying cacti, as part of a general interest in nature. Besides plants I also have a big
-      interest in animals, basicaly as long as it breathes air or CO2 and has a unique survival strategy it sparks my
-      interest.
-    </p>
-    <img id="cactus"
-      src="img/cactus.jpeg">
-    <p>
-      I've also spent a great deal of time imagining and cconstructing stories and the people that live in them, not
-      necessarily in writing, but in visuals, like drawings of characters, landscapes, buildings and tools, this is also
-      something i'd like to do for a living in the future.
-    </p>
-
-  </div>
-
-  <div id="Info">
-
-    <H3> <a id="Contact">Contact</a> </H3>
-    <ul id="info">
-      <li class="C">email = <br>
-        essetijdelijk@gmail.com <br>.</li>
-      <li class="C">phone = <br>
-        +310647289308 <br>.</li>
-        <li class="C">student mail = <br>
-        1041869@HR.nl <br>.</li>
-    </ul>
-  </div>
+  <div id="Social">
+    <a><img src="/img/phone.png">+310647289308</a>
+    <a href="mailto:essetijdelijk@gmail.com"><img src="/img/gmail.webp">essetijdelijk@gmail.com</a>
+    <a href="https://www.linkedin.com/in/esse-verdonk-775148255/"><img src="/img/linkedin.png">Linkedin</a>
+</div>
 
 </body>
 
