--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home - Esse's portfolio</title>
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
   <nav>
 
-    <img id="navImg" src="img/mohawk.png">
+    <img id="navImg" src="./img/mohawk.png">
     <div id="blankSpace"></div>
-    <a class="navi" href="html/skills.html">Skills</a>
-    <a class="navi" href="html/study.html">Study</a>
-    <a class="navi" href="html/mam.html">More About me</a>
+    <a class="navi" href="skills.html">Skills</a>
+    <a class="navi" href="study.html">Study</a>
+    <a class="navi" href="mam.html">More About me</a>
 
   </nav>
 
@@ -46,7 +46,7 @@
     </p>
     </div>
     <div>
-      <img src="/img/essefoto.jpg">
+      <img src="./img/essefoto.jpg">
     </div>
   </div>
 
@@ -74,9 +74,9 @@
   </main>
 
   <div id="Social">
-    <a><img src="/img/phone.png">+310647289308</a>
-    <a href="mailto:essetijdelijk@gmail.com"><img src="/img/gmail.webp">essetijdelijk@gmail.com</a>
-    <a href="https://www.linkedin.com/in/esse-verdonk-775148255/"><img src="/img/linkedin.png">Linkedin</a>
+    <a><img src="./img/phone.png">+310647289308</a>
+    <a href="mailto:essetijdelijk@gmail.com"><img src="./img/gmail.webp">essetijdelijk@gmail.com</a>
+    <a href="https://www.linkedin.com/in/esse-verdonk-775148255/"><img src="./img/linkedin.png">Linkedin</a>
 </div>
 
 </body>
